# SdlHelloWorld

./: CMakeLists.txt  LICENSE
src/: main.c
